# ft_math_lib

./: .gitignore  CMakeLists.txt  LICENSE
src/matrix/: matrix.h  matrix.hpp  matrix_operators.h  matrix_operators.hpp  matrix_utility.h  matrix_utility.hpp  matrix_vect_interop.h  matrix_vect_interop.hpp
src/quaternion/: quaternion.cpp  quaternion.h  quaternion_operators.h  quaternion_operators.hpp  quaternion_utility.h  quaternion_utility.hpp
src/vector/: vector.h  vector.hpp  vector_functions.h  vector_functions.hpp
